--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
        <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"> <a ng-href="/">Home</a></li>
-                    <li><a ng-href="#!/page1">Page 1</a></li>
-                    <li><a ng-href="#!/page2">Page 2</a></li>
+                    <li><a ng-href="#!/page1">Our Candidates</a></li>
+                    <li><a ng-href="#!/page2">About Us</a></li>
                 </ul>
             </div>
         <div id='pageHeader'>
